package com.mindeurfou.model.game.local

data class ScoreDetails(
    val score: Int,
    val net: String,
    val holeNumber: Int
)
