@startuml
'https://plantuml.com/class-diagram

enum GBState {
    INIT
    STARTING
    PENDING
    DONE
}

class Player {
    name : String
    lastName : String
    username : String
    drawableResourceId : Int
}

'class LeaderBoard {
'    leaderBoard : map<String, Int>
'}
'
'class Tournament {
'    name : String
'    state : GBState
'}

class PlayerScore {
    name : String
    scoreSum : Int
    netSum : String
}

class ScoreDetails {
    score : Int
    net : String
}

class Game {
    state : GBState
    currentHole : Int
}

class Course {
    name : String
    numberOfHoles : Int
    par : Int
    gamesPlayed : Int
    createdAt : date
    updatedAt : date
}

class Hole {
    holeNumber : Int
    par : Int
}

Course "1" *-- "many" Hole
Game "many" *-- "many" Player
Game "many" *-- "1" Course
Game "1" *-- "many" PlayerScore
PlayerScore "1" *-- "many" ScoreDetails
'Tournament "1" *-- "many" Game
'Tournament "1" *-- "1" LeaderBoard
'ScoringStrategy <|.. LeaderBoard


@enduml